objects/JunoDoc__Calculated_Fields__c/JunoDoc__Calculated_Fields__c.object-meta.xml
<CustomObject>
    <label>Calculated Fields</label>
    <nameField>
        <displayFormat>CF-{00000}</displayFormat>
        <label>Calculated Fields Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculated Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>