objects/JunoDoc__Calculated_Fields__c/fields/JunoDoc__Calculated_Field__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Calculated_Field__c</fullName>
    <label>Calculated Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>