objects/JunoDoc__Calculated_Fields__c/fields/JunoDoc__Calculated_Field_Query__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Calculated_Field_Query__c</fullName>
    <label>Calculated Field Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>