objects/JunoDoc__Calculated_Fields__c/fields/JunoDoc__Junodoc_Templates__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Junodoc_Templates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Junodoc Templates</label>
    <referenceTo>JunoDoc__Doc_Template__c</referenceTo>
    <relationshipLabel>Calculated Fields</relationshipLabel>
    <relationshipName>Calculated_Fields</relationshipName>
    <type>Lookup</type>
</CustomField>